--- a/clients.properties
+++ b/clients.properties
@@ -1,5 +1,5 @@
 
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
-spring.cloud.consul.discovery.service-name=${spring.application.name}
+spring.cloud.consul.discovery.service-name=configclient
 spring.cloud.consul.discovery.heartbeat.enabled=true
